Name:                glfw-elerea
Version:             0.1
Synopsis:            a GLFW adapter for Elerea
Homepage:            http://patch-tag.com/r/pqwy/glfw-elerea/
License:             BSD3
License-file:        LICENSE
Author:              David Kaloper
Maintainer:          david@pako.st
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.2


Library
  Exposed-modules:     
    FRP.Elerea.GLFW
  
  Build-depends:       
    base   >= 4,
    elerea >= 1.2.3,
    OpenGL >= 2.4.0.0,
    GLFW   >= 0.4.2

  Other-modules:       
